# server/api/Controllers/QuizController.cs
@@ -18,4 +18,13 @@ public class QuizController(IQuizService quizService) : ControllerBase
         List<BaseQuizResponse> quizzes = await quizService.GetQuizzes();
         return quizzes!;
     }
+
+    [HttpGet]
+    [AllowAnonymous]
+    [Route("GetQuiz/{id:int}")]
+    public async Task<ActionResult<QuizWithQuestionsResponse>> GetQuiz(int id)
+    {
+        var quiz = await quizService.GetQuiz(id);
+        return quiz is null ? NotFound() : Ok(quiz);
+    }
 }
